--- a/index.html
+++ b/index.html
@@ -10,45 +10,57 @@
 </head>
 <body>
     <header>
+      <div class="header"> 
         <div class="icon_burguer">
         <img src="./img/icon_burguer.png" alt="icon burguer">
         </div>
-
+   
         <div class="logo">
         <img src="./img/logo.png" alt="logo">
         </div>
+
         <div>
         <h1>Disfruta creando espacios</h1>
         </div>
 
-
+<div class="boton__comprar">
         <button>Comprar Ahora</button>
-    
-
+    </div>
+</div> 
     </header>
     <main>
+<div class="main">
+<article class="organizado">
 
     <h1>Volverse organizado se siente mejor con OPEN SPACE</h1>
 <img src="./img/icon_1.png" alt="icon_1">
+</article>
 
+<article class="necesitas">
 <h2>Lo que necesitas</h2>
 <p>Una linea de productos diseñados para todos tus espacios</p>
-
 <img src="./img/Biodegradable bag.png" alt="Biodegradable">
+</article>
 
+<article class="sostenible">
 <h2>Materias primas sustentables</h2>
 <p>Todos los productos con materias primas sustentables</p>
-
 <img src="./img/Park.png" alt="Park">
+</article>
 
+<article class="guia">
 <h2>Guía</h2>
 <p>Soporte y asesoramiento para ayudarte con tu objetivo</p>
 <div class="envio">
 <img src="./img/go_6.png" alt="go">
+</article>
+</div>
+<article class="envio">
 <h2>Envio gratis garantizado</h2>
 <p>Envio gratis en compras desde 100</p>
 <h3>Comprar ahora</h3>
-</div>
+</article>
+
 <div>
 <h2>Disfruta creando espacios</h2>
 <p>Una linea de productos diseñados para todos tus espacios</p>
@@ -57,7 +69,7 @@
 <button>Comprar ahora</button>
 
 <img src="./img/creando-espacios.jpg" alt="espacios">
-
+</div>
 </main>
     <footer>    
 <h3>Tienda</h3>
