--- a/index.html
+++ b/index.html
@@ -5,90 +5,94 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Evaluación modulo 1</title>
 </head>
 <body>
     <header>
       <div class="header"> 
+        <div class="caja1">
         <div class="icon_burguer">
-        <img src="./img/icon_burguer.png" alt="icon burguer">
+        <img class="img"src="./img/icon_burguer.png" alt="icon burguer">
         </div>
    
         <div class="logo">
-        <img src="./img/logo.png" alt="logo">
+        <img class="img" src="./img/logo.png" alt="logo">
         </div>
-
+    </div>
+    <div class="caja2">
         <div>
         <h1>Disfruta creando espacios</h1>
         </div>
-
-<div class="boton__comprar">
-        <button>Comprar Ahora</button>
     </div>
+
+      <a href="https://www.adalab.es"> <button class="boton__comprar">Comprar Ahora</button></a>
+
 </div> 
     </header>
     <main>
-<div class="main">
-<article class="organizado">
+<section class="main">
 
     <h1>Volverse organizado se siente mejor con OPEN SPACE</h1>
-<img src="./img/icon_1.png" alt="icon_1">
-</article>
 
 <article class="necesitas">
-<h2>Lo que necesitas</h2>
-<p>Una linea de productos diseñados para todos tus espacios</p>
-<img src="./img/Biodegradable bag.png" alt="Biodegradable">
+    <img class="mesa" src="./img/icon_1.png" alt="icon_1">
+    <h2>Lo que necesitas</h2>
+    <p>Una linea de productos diseñados para todos tus espacios</p>
 </article>
 
 <article class="sostenible">
-<h2>Materias primas sustentables</h2>
-<p>Todos los productos con materias primas sustentables</p>
-<img src="./img/Park.png" alt="Park">
+    <img class="bag" src="./img/Biodegradable bag.png" alt="Biodegradable">
+    
+    <h2>Materias primas sustentables</h2>
+    <p>Todos los productos con materias primas sustentables</p>
 </article>
 
 <article class="guia">
-<h2>Guía</h2>
-<p>Soporte y asesoramiento para ayudarte con tu objetivo</p>
-<div class="envio">
-<img src="./img/go_6.png" alt="go">
+    <img src="./img/Park.png" alt="Park">
+    <h2>Guía</h2>
+    <p>Soporte y asesoramiento para ayudarte con tu objetivo</p>
 </article>
-</div>
+</section>
+
 <article class="envio">
-<h2>Envio gratis garantizado</h2>
-<p>Envio gratis en compras desde 100</p>
-<h3>Comprar ahora</h3>
+    <img class="img__envio"src="./img/go_6.png" alt="go">
+    <h2 class="h2__envio">Envio gratis garantizado</h2>
+    <p class="p__envio">Envio gratis en compras desde 100</p>
+    <h3 class="h3__envio">Comprar ahora</h3>
 </article>
 
-<div>
-<h2>Disfruta creando espacios</h2>
-<p>Una linea de productos diseñados para todos tus espacios</p>
+<div class="disfruta">
+    <h2>Disfruta creando espacios</h2>
+    <p>Una linea de productos diseñados para todos tus espacios</p>
+    <a href="https://www.adalab.es"> <button class="boton__comprar">Comprar ahora</button></a>
 </div>
 
-<button>Comprar ahora</button>
-
-<img src="./img/creando-espacios.jpg" alt="espacios">
+<div class="creando">
+    <img class="img__creando" src="./img/creando-espacios.jpg" alt="espacios">
 </div>
 </main>
-    <footer>    
-<h3>Tienda</h3>
-<ol>
-    <li>Productos</li>
-    <li>Cajoneras</li>
-    <li>Para toda la casa</li>
-    <li>Habitaciones</li>
-</ol>
-<h3>Nosotros</h3>
-<ol>
-    <li>Nuestra guia</li>
-    <li>Nuestro diseño</li>
-    <li>Nuestra historia</li>
-    <li>Ayuda</li>
-</ol>
-<h3>Contacto</h3>
-<p>ayuda@openspace.com</p>
-<p>Socios</p>
+
+<footer class="footer">    
+    <h2 class="h2__footer">Tienda</h2>
+        <ol>
+            <li>Productos</li>
+            <li>Cajoneras</li>
+            <li>Para toda la casa</li>
+            <li>Habitaciones</li>
+        </ol>
+    <h2 class="h2__footer">Nosotros</h2>
+        <ol>
+            <li>Nuestra guía</li>
+            <li>Nuestro diseño</li>
+            <li>Nuestra historia</li>
+            <li>Ayuda</li>
+        </ol>
+    <h2 class="h2__footer">Contacto</h2>
+    <p class="h2__footer">ayuda@openspace.com</p>
+<p class="h2__footer">Socios</p>
     </footer>
 </body>
 </html>
