--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </div>
 
-      <a href="https://www.adalab.es"> <button class="boton__comprar">Comprar Ahora</button></a>
+      <a href="https://adalab.es"target="-blank"> <button class="boton__comprar">Comprar Ahora</button></a>
 
 </div> 
     </header>
@@ -59,15 +59,17 @@
 
 <article class="envio">
     <img class="img__envio"src="./img/go_6.png" alt="go">
-    <h2 class="h2__envio">Envio gratis garantizado</h2>
-    <p class="p__envio">Envio gratis en compras desde 100</p>
-    <h3 class="h3__envio">Comprar ahora</h3>
+    <h1 class="h1__envio">Envío gratis garantizado</h1>
+    <p class="p__envio">Envío gratis en compras desde 100</p>
+    <a href="https://adalab.es"target="-blank">
+    <h3 class="h3__envio">Comprar ahora</h3></a>
 </article>
 
 <div class="disfruta">
-    <h2>Disfruta creando espacios</h2>
+    <h1>Disfruta creando espacios</h1>
     <p>Una linea de productos diseñados para todos tus espacios</p>
-    <a href="https://www.adalab.es"> <button class="boton__comprar">Comprar ahora</button></a>
+    <a href="https://adalab.es"target="-blank">
+    <button>Comprar ahora</button></a>
 </div>
 
 <div class="creando">
@@ -76,23 +78,33 @@
 </main>
 
 <footer class="footer">    
-    <h2 class="h2__footer">Tienda</h2>
+   <section class="listado1">
         <ol>
+            <li class="Tienda">Tienda</li>
             <li>Productos</li>
             <li>Cajoneras</li>
             <li>Para toda la casa</li>
             <li>Habitaciones</li>
         </ol>
-    <h2 class="h2__footer">Nosotros</h2>
+    </section>
+    <section class="listado2">
         <ol>
+            <li class="Tienda">Nosotros</li>
             <li>Nuestra guía</li>
             <li>Nuestro diseño</li>
             <li>Nuestra historia</li>
             <li>Ayuda</li>
         </ol>
-    <h2 class="h2__footer">Contacto</h2>
-    <p class="h2__footer">ayuda@openspace.com</p>
-<p class="h2__footer">Socios</p>
+    </section>
+    <section>
+        <ol>
+            <li class="Tienda">Contacto</li>
+            <li>ayuda@openspace.com</li>
+            <li>Socios</li>
+    </ol>
+    </section>
+    
+
     </footer>
 </body>
 </html>
