--- a/index.html
+++ b/index.html
@@ -8,70 +8,70 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <title>Evaluación modulo 1</title>
+    <title>Evaluación módulo 1 - Montse Morán-</title>
 </head>
 <body>
     <header>
       <div class="header"> 
-        <div class="caja1">
-        <div class="icon_burguer">
-        <img class="img"src="./img/icon_burguer.png" alt="icon burguer">
-        </div>
-        <div class="logo">
-        <img class="img" src="./img/logo.png" alt="logo">
-        </div>
+        <div class="box1">
+        <img class="icon_burguer"src="./img/icon_burguer.svg" alt="icon burguer">
+
+        <img class="logo" src="./img/logo.png" alt="logo">
+        
     </div>
-    <div class="caja2">
+    <div class="box2">
         <div>
         <h1>Disfruta creando espacios</h1>
         </div>
 
-      <a href="https://adalab.es"target="-blank"> <button class="boton__comprar">Comprar Ahora</button></a>
+      <a href="https://adalab.es"target="-blank"> <button class="buy__button"><strong>Comprar Ahora</strong></button></a>
     </div>
 </div> 
     </header>
     <main>
-<section class="modulo2">
+<section class="module2">
 
-    <h1 class="titulo_modulo_2">Volverse organizado se siente mejor con OPEN SPACE</h1>
+    <h1 class="title_module_2">Volverse organizado se siente mejor con OPEN SPACE</h1>
 
-<article class="modulo2">
-    <img class="imagen__modulo" src="./img/icon_1.png" alt="icon_1">
+<article class="module2">
+    <img class="image__module" src="./img/icon_1.png" alt="icon_1">
     <h2>Lo que necesitas</h2>
     <p>Una linea de productos diseñados para todos tus espacios</p>
 </article>
 
-<article class="modulo2">
-    <img class="imagen__modulo2" src="./img/Biodegradable bag.png" alt="Biodegradable">
+<article class="module2">
+    <img class="image__module" src="./img/Biodegradable bag.png" alt="Biodegradable">
     
     <h2>Materias primas sustentables</h2>
     <p>Todos los productos con materias primas sustentables</p>
 </article>
 
-<article class="modulo2">
-    <img class="imagen__modulo2"src="./img/Park.png" alt="Park">
+<article class="module2">
+    <img class="image__module"src="./img/Park.png" alt="Park">
     <h2>Guía</h2>
     <p>Soporte y asesoramiento para ayudarte con tu objetivo</p>
 </article>
 </section>
-
-<article class="envio">
-    <img class="img__envio"src="./img/go_6.png" alt="go">
-    <h1 class="h1__envio">Envío gratis garantizado</h1>
-    <p class="p__envio">Envío gratis en compras desde 100</p>
+<div class="go">
+<article>
+    <img class="img__go"src="./img/go_6.png" alt="go">
+    <h1 class="h1__go">Envío gratis garantizado</h1>
+    <p class="p__go">Envío gratis en compras desde 100</p>
     <a href="https://adalab.es"target="-blank">
-    <h3 class="h3__envio">Comprar ahora</h3></a>
+    <h3 class="h3__go">Comprar ahora</h3></a>
 </article>
-
-<div class="disfruta">
+</div>
+<div class="module4"></div>
+<div class="enjoy">
     <h1>Disfruta creando espacios</h1>
     <p>Una linea de productos diseñados para todos tus espacios</p>
     <a href="https://adalab.es"target="-blank">
-    <button class="boton__comprar2">Comprar ahora</button></a>
+    <button class="buy__button2"><strong></strong>Comprar ahora</strong></button></a>
 </div>
 
-<div class="creando">
+<div class="creating">
     <img class="img__creando" src="./img/creando-espacios.jpg" alt="espacios">
+</div>
 </div>
 </main>
 
@@ -79,7 +79,7 @@
  <div class="menu">      
     <nav>  <a href="https://adalab.es"target="-blank">
         <ol class="listado">
-            <li class="titulo_listado">Tienda</li>
+            <li class="title_list">Tienda</li>
             <li>Productos</li>
             <li>Cajoneras</li>
             <li>Para toda la casa</li>
@@ -89,8 +89,8 @@
 </div>
 <div class="menu">  
     <nav>  
-        <ol class="listado">
-            <li class="titulo_listado">Nosotros</li>
+        <ol class="list">
+            <li class="title_list">Nosotros</li>
             <li>Nuestra guía</li>
             <li>Nuestro diseño</li>
             <li>Nuestra historia</li>
@@ -99,8 +99,8 @@
     </nav>
 </div>
     <nav>  
-    <ol class="listado2">
-            <li class="titulo_listado">Contacto</li>
+    <ol class="list2">
+            <li class="title_list">Contacto</li>
             <li>ayuda@openspace.com</li>
             <li>Socios</li>
      </ol></a>
