--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
             <a href="https://adalab.es"target="-blank"> <img class="icon_burguer"src="./img/icon_burguer.svg" alt="icon burguer"></a>
 
         <img class="logo" src="./img/logo.png" alt="logo">
-        
+        <nav class="menu_box1">
+            <ul class="list_box1">
+                <li>Productos</li>
+                <li>Colecciones</li>
+                <li>Tienda</li>
+                <li>Inicio</li>
+            </ul>
+        </nav>
     </div>
     <div class="box2">
         <div>
@@ -101,7 +108,7 @@
         </ol>
     </nav>
 </div>
-    <nav>  
+    <nav class="menu_footer">  
     <ol class="list">
             <li class="title_list">Contacto</li>
             <li><a href="https://adalab.es"target="-blank">ayuda@openspace.com</a></li>
