arreglo target:_blank

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <div class="header"> 
         <div class="box1">
-            <a href="https://adalab.es"target="-blank"> <img class="icon_burguer"src="./img/icon_burguer.svg" alt="icon burguer"></a>
+            <a href="https://adalab.es"target="_blank"> <img class="icon_burguer"src="./img/icon_burguer.svg" alt="icon burguer"></a>
 
         <img class="logo" src="./img/logo.png" alt="logo">
         <nav class="menu_box1">
@@ -33,7 +33,7 @@
         <h1>Disfruta creando espacios</h1>
         </div>
 <div class ="button">
-      <a href="https://adalab.es"target="-blank"> <button class="buy__button"><strong>Comprar Ahora</strong></button></a></div>
+      <a href="https://adalab.es"target="_blank"> <button class="buy__button"><strong>Comprar Ahora</strong></button></a></div>
     </div>
 </div> 
     </header>
@@ -66,7 +66,7 @@
     <img class="img__go"src="./img/go_6.png" alt="go">
     <h1 class="h1__go">Envío gratis garantizado</h1>
     <p class="p__go">Envío gratis en compras desde 100</p>
-    <a href="https://adalab.es"target="-blank">
+    <a href="https://adalab.es"target="_blank">
     <h3 class="h3__go">Comprar ahora</h3></a>
 </article>
 
@@ -75,7 +75,7 @@
 <article class="enjoy">
     <h1>Disfruta creando espacios</h1>
     <p>Una linea de productos diseñados para todos tus espacios</p>
-    <a href="https://adalab.es"target="-blank">
+    <a href="https://adalab.es"target="_blank">
     <button class="buy__button2"><strong></strong>Comprar ahora</strong></button></a>
 </article>
 
@@ -90,10 +90,10 @@
     <nav>  
         <ol class="list">
             <li class="title_list">Tienda</li>
-            <li><a href="https://adalab.es"target="-blank">Productos</a></li>
-            <li><a href="https://adalab.es"target="-blank">Cajoneras</a></li>
-            <li><a href="https://adalab.es"target="-blank">Para toda la casa</a></li>
-            <li><a href="https://adalab.es"target="-blank">Habitaciones</a></li>
+            <li><a href="https://adalab.es"target="_blank">Productos</a></li>
+            <li><a href="https://adalab.es"target="_blank">Cajoneras</a></li>
+            <li><a href="https://adalab.es"target="_blank">Para toda la casa</a></li>
+            <li><a href="https://adalab.es"target="_blank">Habitaciones</a></li>
         </ol>
     </nav>
 </div>
@@ -101,25 +101,25 @@
     <nav>  
         <ol class="list">
             <li class="title_list">Nosotros</li>
-            <li><a href="https://adalab.es"target="-blank">Nuestra guía</a></li>
-            <li><a href="https://adalab.es"target="-blank">Nuestro diseño</a></li>
-            <li><a href="https://adalab.es"target="-blank">Nuestra historia</a></li>
-            <li><a href="https://adalab.es"target="-blank">Ayuda</a></li>
+            <li><a href="https://adalab.es"target="_blank">Nuestra guía</a></li>
+            <li><a href="https://adalab.es"target="_blank">Nuestro diseño</a></li>
+            <li><a href="https://adalab.es"target="_blank">Nuestra historia</a></li>
+            <li><a href="https://adalab.es"target="_blank">Ayuda</a></li>
         </ol>
     </nav>
 </div>
     <nav class="menu_footer">  
     <ol class="list">
             <li class="title_list">Contacto</li>
-            <li><a href="https://adalab.es"target="-blank">ayuda@openspace.com</a></li>
-            <li><a href="https://adalab.es"target="-blank">Socios</a></li>
+            <li><a href="https://adalab.es"target="_blank">ayuda@openspace.com</a></li>
+            <li><a href="https://adalab.es"target="_blank">Socios</a></li>
      </ol>
         
     <div class="social_networks">
-        <a href="https://adalab.es"target="-blank">  <img src="./img/brand-linked-in.png" alt="linkedin"></a>
-        <a href="https://adalab.es"target="-blank"> 
-            <img src="./img/brand-instagram.png" alt="instagram"></a>
-            <a href="https://adalab.es"target="-blank"> 
+        <a href="https://adalab.es"target="_blank">  <img src="./img/brand-linked-in.png" alt="linkedin"></a>
+        <a href="https://adalab.es"target="_blank"> 
+            <img src="./img/brand-instagram.png"alt="instagram"></a>
+            <a href="https://adalab.es"target="_blank"> 
             <img src="./img/brand-twitter.png" alt="twitter"></a>
 
     </div> 
